--- a/DateWebApp01/web/index.html
+++ b/DateWebApp01/web/index.html
@@ -12,6 +12,7 @@
         <form id="form-reservation" name="form" action="DateServlet" method="get">
            
             Nombre: <input type="text" id="name" name="name"/>
+            Apellido: <input type="text" id="apellido" name="apellido"/>
             <br><br>
             Día
             <select id="dia" name="dia">
