--- a/DateWebApp01/web/index.html
+++ b/DateWebApp01/web/index.html
@@ -6,6 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+//barra de arriba
+
+
+
+
+
+
         <h1>Agendar cita </h1>
         <br>
         
@@ -45,5 +52,8 @@
             <input type="submit" id="mysubmit" name="mysubmit" value="send"/>
             
         </form>
+
+
+        //footer
     </body>
 </html>
