--- a/DateWebApp01/web/index.html
+++ b/DateWebApp01/web/index.html
@@ -18,15 +18,15 @@
         <h1>Welcome page Asfa.nailedit!</h1>
         <br><br>
  
-        <form action="UserServlet" method="post">
+        <form action="UserServlet" class="formulario" method="post">
             
             user:<br> 
-            <input type="text" name="user" required />
+            <input type="text" name="user" class="datos" required />
             <br><br>
             password: <br>
-            <input type="password" name="password" required />
+            <input type="password" name="password" class="datos" required />
             <br><br>
-            <input type="submit" value="Log In" />
+            <input type="submit" class="boton" value="Log In" />
             <input type="hidden" name="formid" value="1" />
             
         </form>
