--- a/DateWebApp01/web/index.html
+++ b/DateWebApp01/web/index.html
@@ -122,7 +122,7 @@
         
         <script src="Scripts/validate/jquery-1.8.3.js" type="text/javascript"></script>
         <script src="Scripts/validate/jquery.validate.js" type="text/javascript"></script>
-        <script src="Scripts/pageValidate.js" type="text/javascript"></script>
+        <script src="Scripts/indexValidate.js" type="text/javascript"></script>
 
         
     </body>
