--- a/DateWebApp01/web/index.html
+++ b/DateWebApp01/web/index.html
@@ -59,9 +59,14 @@
                         </div>
                         
                         <div class="row">
-                            <a href="https://www.instagram.com/asfa.nailedit/?hl=es-la"><i class="fab fa-instagram" ></i></a>
+                            <i class="fab fa-instagram" ></i>
                             <a href="https://www.instagram.com/asfa.nailedit/?hl=es-la"><label >Síguenos en Instagram</label></a>
                         </div>
+
+                        <h3>Servicios en:</h3>
+                            <p>ESEN</p>
+                            <p>San Miguel</p>
+                            <p>Vía del Mar</p>
                     </div>
 
                     
